--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<table class="mytable">
 	<tr class="header">
-    	<th>Animals</th>
+    	<th>Animals
     	<th>Plants</th>
   	</tr>
   	<tr>
